plugins/binding/capi/include/TellusimCMath.h

typedef struct TSVector3d {
	union {
		struct {
			float64_t x, y, z;
		};
		struct {
			TSVector2d xy;
			float64_t xy_z;
		};
		float64_t v[3];
	};
} TSVector3d;
TS_CAPI TSVector3d* TS_CCALL tsVector3d_abs(TSVector3d *ret, const TSVector3d *v);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_neg(TSVector3d *ret, const TSVector3d *v);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_mul1(TSVector3d *ret, const TSVector3d *v0, float64_t v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_div1(TSVector3d *ret, const TSVector3d *v0, float64_t v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_add1(TSVector3d *ret, const TSVector3d *v0, float64_t v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_sub1(TSVector3d *ret, const TSVector3d *v0, float64_t v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_mul(TSVector3d *ret, const TSVector3d *v0, const TSVector3d *v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_div(TSVector3d *ret, const TSVector3d *v0, const TSVector3d *v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_add(TSVector3d *ret, const TSVector3d *v0, const TSVector3d *v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_sub(TSVector3d *ret, const TSVector3d *v0, const TSVector3d *v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_min(TSVector3d *ret, const TSVector3d *v0, const TSVector3d *v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_max(TSVector3d *ret, const TSVector3d *v0, const TSVector3d *v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_clamp(TSVector3d *ret, const TSVector3d *v, const TSVector3d *v0, const TSVector3d *v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_saturate(TSVector3d *ret, const TSVector3d *v);
TS_CAPI float64_t TS_CCALL tsVector3d_dot(const TSVector3d *v0, const TSVector3d *v1);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_cross(TSVector3d *ret, const TSVector3d *v0, const TSVector3d *v1);
TS_CAPI float64_t TS_CCALL tsVector3d_length(const TSVector3d *v);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_normalize(TSVector3d *ret, const TSVector3d *v);
TS_CAPI TSVector3d* TS_CCALL tsVector3d_lerp(TSVector3d *ret, const TSVector3d *v0, const TSVector3d *v1, float64_t k);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_abs(TSVector4i *ret, const TSVector4i *v);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_neg(TSVector4i *ret, const TSVector4i *v);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_mul1(TSVector4i *ret, const TSVector4i *v0, int32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_mul1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_div1(TSVector4i *ret, const TSVector4i *v0, int32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_div1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_add1(TSVector4i *ret, const TSVector4i *v0, int32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_add1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_sub1(TSVector4i *ret, const TSVector4i *v0, int32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_sub1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_and1(TSVector4i *ret, const TSVector4i *v0, int32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_and1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_or1(TSVector4i *ret, const TSVector4i *v0, int32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_or1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_xor1(TSVector4i *ret, const TSVector4i *v0, int32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_xor1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_shl1(TSVector4i *ret, const TSVector4i *v0, int32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_shl1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_shr1(TSVector4i *ret, const TSVector4i *v0, int32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_shr1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_mul(TSVector4i *ret, const TSVector4i *v0, const TSVector4i *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_mul(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_div(TSVector4i *ret, const TSVector4i *v0, const TSVector4i *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_div(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_add(TSVector4i *ret, const TSVector4i *v0, const TSVector4i *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_add(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_sub(TSVector4i *ret, const TSVector4i *v0, const TSVector4i *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_sub(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_and(TSVector4i *ret, const TSVector4i *v0, const TSVector4i *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_and(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_or(TSVector4i *ret, const TSVector4i *v0, const TSVector4i *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_or(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_xor(TSVector4i *ret, const TSVector4i *v0, const TSVector4i *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_xor(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_min(TSVector4i *ret, const TSVector4i *v0, const TSVector4i *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_min(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_max(TSVector4i *ret, const TSVector4i *v0, const TSVector4i *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_max(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_clamp(TSVector4i *ret, const TSVector4i *v, const TSVector4i *v0, const TSVector4i *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_clamp(TSVector4u *ret, const TSVector4u *v, const TSVector4u *v0, const TSVector4u *v1);