plugins/binding/rust/source/TellusimRSMath.rs


/*
 */
extern "C" {
	fn tsVector3d_abs(ret: *mut Vector3d, v: *const Vector3d) -> *mut Vector3d;
	fn tsVector3d_neg(ret: *mut Vector3d, v: *const Vector3d) -> *mut Vector3d;
	fn tsVector3d_mul1(ret: *mut Vector3d, v0: *const Vector3d, v1: f64) -> *mut Vector3d;
	fn tsVector3d_div1(ret: *mut Vector3d, v0: *const Vector3d, v1: f64) -> *mut Vector3d;
	fn tsVector3d_add1(ret: *mut Vector3d, v0: *const Vector3d, v1: f64) -> *mut Vector3d;
	fn tsVector3d_sub1(ret: *mut Vector3d, v0: *const Vector3d, v1: f64) -> *mut Vector3d;
	fn tsVector3d_mul(ret: *mut Vector3d, v0: *const Vector3d, v1: *const Vector3d) -> *mut Vector3d;
	fn tsVector3d_div(ret: *mut Vector3d, v0: *const Vector3d, v1: *const Vector3d) -> *mut Vector3d;
	fn tsVector3d_add(ret: *mut Vector3d, v0: *const Vector3d, v1: *const Vector3d) -> *mut Vector3d;
	fn tsVector3d_sub(ret: *mut Vector3d, v0: *const Vector3d, v1: *const Vector3d) -> *mut Vector3d;
	fn tsVector3d_min(ret: *mut Vector3d, v0: *const Vector3d, v1: *const Vector3d) -> *mut Vector3d;
	fn tsVector3d_max(ret: *mut Vector3d, v0: *const Vector3d, v1: *const Vector3d) -> *mut Vector3d;
	fn tsVector3d_clamp(ret: *mut Vector3d, v: *const Vector3d, v0: *const Vector3d, v1: *const Vector3d) -> *mut Vector3d;
	fn tsVector3d_saturate(ret: *mut Vector3d, v: *const Vector3d) -> *mut Vector3d;
	fn tsVector3d_dot(v0: *const Vector3d, v1: *const Vector3d) -> f64;
	fn tsVector3d_cross(ret: *mut Vector3d, v0: *const Vector3d, v1: *const Vector3d) -> *mut Vector3d;
	fn tsVector3d_length(v: *const Vector3d) -> f64;
	fn tsVector3d_normalize(ret: *mut Vector3d, v: *const Vector3d) -> *mut Vector3d;
	fn tsVector3d_lerp(ret: *mut Vector3d, v0: *const Vector3d, v1: *const Vector3d, k: f64) -> *mut Vector3d;
}

/*****************************************************************************\
 *
 * Vector4i
 *
\*****************************************************************************/

/*
 */
#[repr(C, align(16))]
#[derive(Copy, Clone, Default)]
pub struct Vector4i {
	pub x: i32,
	pub y: i32,
	pub z: i32,
	pub w: i32,
}

/*
 */
impl Vector4i {
	
	pub fn new_s(v: i32) -> Vector4i {
		Vector4i { x: v, y: v, z: v, w: v }
	}
	pub fn new_v2(v: &Vector2i, z: i32, w: i32) -> Vector4i {
		Vector4i { x: v.x, y: v.y, z: z, w: w }
	}
	pub fn new_v3(v: &Vector3i, w: i32) -> Vector4i {
		Vector4i { x: v.x, y: v.y, z: v.z, w: w }
	}
	pub fn new(x: i32, y: i32, z: i32, w: i32) -> Vector4i {
		Vector4i { x: x, y: y, z: z, w: w }
	}
	pub fn new_a(v: &[i32]) -> Vector4i {
		Vector4i { x: v[0], y: v[1], z: v[2], w: v[3] }
	}
	
	pub fn abs(&self) -> Vector4i {
		let mut ret = Vector4i::default();
		unsafe { tsVector4i_abs(&mut ret, self); }
		ret
	}
	
	pub fn min(v0: &Vector4i, v1: &Vector4i) -> Vector4i {
		let mut ret = Vector4i::default();
		unsafe { tsVector4i_min(&mut ret, v0, v1); }
		ret
	}
	pub fn max(v0: &Vector4i, v1: &Vector4i) -> Vector4i {
		let mut ret = Vector4i::default();
		unsafe { tsVector4i_max(&mut ret, v0, v1); }
		ret
	}
	pub fn clamp(&self, v0: &Vector4i, v1: &Vector4i) -> Vector4i {
		let mut ret = Vector4i::default();
		unsafe { tsVector4i_clamp(&mut ret, self, v0, v1); }
		ret
	}
	
	pub fn zero() -> Vector4i {
		Vector4i { x: 0, y: 0, z: 0, w: 0 }
	}
	pub fn one() -> Vector4i {
		Vector4i { x: 1, y: 1, z: 1, w: 1 }
	}
}

/*
 */
impl fmt::Display for Vector4i {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "({0} {1} {2} {3})", self.x, self.y, self.z, self.w)
	}
}

/*
 */
declare_neg_op!(Vector4i, tsVector4i_neg);

/*
 */
declare_scalar_op!(Vector4i, i32, Mul, mul, tsVector4i_mul1);
declare_scalar_op!(Vector4i, i32, Div, div, tsVector4i_div1);
declare_scalar_op!(Vector4i, i32, Add, add, tsVector4i_add1);
declare_scalar_op!(Vector4i, i32, Sub, sub, tsVector4i_sub1);
declare_scalar_op!(Vector4i, i32, BitAnd, bitand, tsVector4i_and1);
declare_scalar_op!(Vector4i, i32, BitOr,  bitor,  tsVector4i_or1);
declare_scalar_op!(Vector4i, i32, BitXor, bitxor, tsVector4i_xor1);
declare_scalar_op!(Vector4i, i32, Shl, shl, tsVector4i_shl1);
declare_scalar_op!(Vector4i, i32, Shr, shr, tsVector4i_shr1);

/*
 */
declare_vector_op!(Vector4i, Mul, mul, tsVector4i_mul);
declare_vector_op!(Vector4i, Div, div, tsVector4i_div);
declare_vector_op!(Vector4i, Add, add, tsVector4i_add);
declare_vector_op!(Vector4i, Sub, sub, tsVector4i_sub);
declare_vector_op!(Vector4i, BitAnd, bitand, tsVector4i_and);
declare_vector_op!(Vector4i, BitOr,  bitor,  tsVector4i_or);
declare_vector_op!(Vector4i, BitXor, bitxor, tsVector4i_xor);

/*
 */
extern "C" {
	fn tsVector4i_abs(ret: *mut Vector4i, v: *const Vector4i) -> *mut Vector4i;
	fn tsVector4i_neg(ret: *mut Vector4i, v: *const Vector4i) -> *mut Vector4i;
	fn tsVector4i_mul1(ret: *mut Vector4i, v0: *const Vector4i, v1: i32) -> *mut Vector4i;
	fn tsVector4i_div1(ret: *mut Vector4i, v0: *const Vector4i, v1: i32) -> *mut Vector4i;
	fn tsVector4i_add1(ret: *mut Vector4i, v0: *const Vector4i, v1: i32) -> *mut Vector4i;
	fn tsVector4i_sub1(ret: *mut Vector4i, v0: *const Vector4i, v1: i32) -> *mut Vector4i;
	fn tsVector4i_and1(ret: *mut Vector4i, v0: *const Vector4i, v1: i32) -> *mut Vector4i;
	fn tsVector4i_or1(ret: *mut Vector4i, v0: *const Vector4i, v1: i32) -> *mut Vector4i;
	fn tsVector4i_xor1(ret: *mut Vector4i, v0: *const Vector4i, v1: i32) -> *mut Vector4i;
	fn tsVector4i_shl1(ret: *mut Vector4i, v0: *const Vector4i, v1: i32) -> *mut Vector4i;
	fn tsVector4i_shr1(ret: *mut Vector4i, v0: *const Vector4i, v1: i32) -> *mut Vector4i;
	fn tsVector4i_mul(ret: *mut Vector4i, v0: *const Vector4i, v1: *const Vector4i) -> *mut Vector4i;
	fn tsVector4i_div(ret: *mut Vector4i, v0: *const Vector4i, v1: *const Vector4i) -> *mut Vector4i;
	fn tsVector4i_add(ret: *mut Vector4i, v0: *const Vector4i, v1: *const Vector4i) -> *mut Vector4i;
	fn tsVector4i_sub(ret: *mut Vector4i, v0: *const Vector4i, v1: *const Vector4i) -> *mut Vector4i;
	fn tsVector4i_and(ret: *mut Vector4i, v0: *const Vector4i, v1: *const Vector4i) -> *mut Vector4i;
	fn tsVector4i_or(ret: *mut Vector4i, v0: *const Vector4i, v1: *const Vector4i) -> *mut Vector4i;
	fn tsVector4i_xor(ret: *mut Vector4i, v0: *const Vector4i, v1: *const Vector4i) -> *mut Vector4i;
	fn tsVector4i_min(ret: *mut Vector4i, v0: *const Vector4i, v1: *const Vector4i) -> *mut Vector4i;
	fn tsVector4i_max(ret: *mut Vector4i, v0: *const Vector4i, v1: *const Vector4i) -> *mut Vector4i;
	fn tsVector4i_clamp(ret: *mut Vector4i, v: *const Vector4i, v0: *const Vector4i, v1: *const Vector4i) -> *mut Vector4i;
}

/*****************************************************************************\
 *
 * Vector4u
 *
\*****************************************************************************/

/*
 */
#[repr(C, align(16))]
#[derive(Copy, Clone, Default)]
pub struct Vector4u {
	pub x: u32,
	pub y: u32,
	pub z: u32,
	pub w: u32,
}

/*
 */
impl Vector4u {
	
	pub fn new_s(v: u32) -> Vector4u {
		Vector4u { x: v, y: v, z: v, w: v }
	}
	pub fn new_v2(v: &Vector2u, z: u32, w: u32) -> Vector4u {
		Vector4u { x: v.x, y: v.y, z: z, w: w }
	}
	pub fn new_v3(v: &Vector3u, w: u32) -> Vector4u {
		Vector4u { x: v.x, y: v.y, z: v.z, w: w }
	}
	pub fn new_v4i(v: &Vector4i) -> Vector4u {
		Vector4u { x: v.x as u32, y: v.y as u32, z: v.z as u32, w: v.w as u32 }
	}
	pub fn new_v4f(v: &Vector4f) -> Vector4u {
		Vector4u { x: v.x as u32, y: v.y as u32, z: v.z as u32, w: v.w as u32 }
	}
	pub fn new_v4d(v: &Vector4d) -> Vector4u {
		Vector4u { x: v.x as u32, y: v.y as u32, z: v.z as u32, w: v.w as u32 }
	}
	pub fn new(x: u32, y: u32, z: u32, w: u32) -> Vector4u {
		Vector4u { x: x, y: y, z: z, w: w }
	}
	pub fn new_a(v: &[u32]) -> Vector4u {
		Vector4u { x: v[0], y: v[1], z: v[2], w: v[3] }
	}
	
	pub fn min(v0: &Vector4u, v1: &Vector4u) -> Vector4u {
		let mut ret = Vector4u::default();
		unsafe { tsVector4u_min(&mut ret, v0, v1); }
		ret
	}
	pub fn max(v0: &Vector4u, v1: &Vector4u) -> Vector4u {
		let mut ret = Vector4u::default();
		unsafe { tsVector4u_max(&mut ret, v0, v1); }
		ret
	}
	pub fn clamp(&self, v0: &Vector4u, v1: &Vector4u) -> Vector4u {
		let mut ret = Vector4u::default();
		unsafe { tsVector4u_clamp(&mut ret, self, v0, v1); }
		ret
	}
	
	pub fn zero() -> Vector4u {
		Vector4u { x: 0, y: 0, z: 0, w: 0 }
	}
	pub fn one() -> Vector4u {
		Vector4u { x: 1, y: 1, z: 1, w: 1 }
	}
}

/*
 */
impl fmt::Display for Vector4u {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "({0} {1} {2} {3})", self.x, self.y, self.z, self.w)
	}
}

/*
 */
declare_scalar_op!(Vector4u, u32, Mul, mul, tsVector4u_mul1);
declare_scalar_op!(Vector4u, u32, Div, div, tsVector4u_div1);
declare_scalar_op!(Vector4u, u32, Add, add, tsVector4u_add1);
declare_scalar_op!(Vector4u, u32, Sub, sub, tsVector4u_sub1);
declare_scalar_op!(Vector4u, u32, BitAnd, bitand, tsVector4u_and1);
declare_scalar_op!(Vector4u, u32, BitOr,  bitor,  tsVector4u_or1);
declare_scalar_op!(Vector4u, u32, BitXor, bitxor, tsVector4u_xor1);
declare_scalar_op!(Vector4u, u32, Shl, shl, tsVector4u_shl1);
declare_scalar_op!(Vector4u, u32, Shr, shr, tsVector4u_shr1);

/*
 */
declare_vector_op!(Vector4u, Mul, mul, tsVector4u_mul);
declare_vector_op!(Vector4u, Div, div, tsVector4u_div);
declare_vector_op!(Vector4u, Add, add, tsVector4u_add);
declare_vector_op!(Vector4u, Sub, sub, tsVector4u_sub);
declare_vector_op!(Vector4u, BitAnd, bitand, tsVector4u_and);
declare_vector_op!(Vector4u, BitOr,  bitor,  tsVector4u_or);
declare_vector_op!(Vector4u, BitXor, bitxor, tsVector4u_xor);

/*
 */
extern "C" {
	fn tsVector4u_mul1(ret: *mut Vector4u, v0: *const Vector4u, v1: u32) -> *mut Vector4u;
	fn tsVector4u_div1(ret: *mut Vector4u, v0: *const Vector4u, v1: u32) -> *mut Vector4u;
	fn tsVector4u_add1(ret: *mut Vector4u, v0: *const Vector4u, v1: u32) -> *mut Vector4u;
	fn tsVector4u_sub1(ret: *mut Vector4u, v0: *const Vector4u, v1: u32) -> *mut Vector4u;
	fn tsVector4u_and1(ret: *mut Vector4u, v0: *const Vector4u, v1: u32) -> *mut Vector4u;
	fn tsVector4u_or1(ret: *mut Vector4u, v0: *const Vector4u, v1: u32) -> *mut Vector4u;
	fn tsVector4u_xor1(ret: *mut Vector4u, v0: *const Vector4u, v1: u32) -> *mut Vector4u;
	fn tsVector4u_shl1(ret: *mut Vector4u, v0: *const Vector4u, v1: u32) -> *mut Vector4u;
	fn tsVector4u_shr1(ret: *mut Vector4u, v0: *const Vector4u, v1: u32) -> *mut Vector4u;
	fn tsVector4u_mul(ret: *mut Vector4u, v0: *const Vector4u, v1: *const Vector4u) -> *mut Vector4u;
	fn tsVector4u_div(ret: *mut Vector4u, v0: *const Vector4u, v1: *const Vector4u) -> *mut Vector4u;
	fn tsVector4u_add(ret: *mut Vector4u, v0: *const Vector4u, v1: *const Vector4u) -> *mut Vector4u;
	fn tsVector4u_sub(ret: *mut Vector4u, v0: *const Vector4u, v1: *const Vector4u) -> *mut Vector4u;
	fn tsVector4u_and(ret: *mut Vector4u, v0: *const Vector4u, v1: *const Vector4u) -> *mut Vector4u;
	fn tsVector4u_or(ret: *mut Vector4u, v0: *const Vector4u, v1: *const Vector4u) -> *mut Vector4u;
	fn tsVector4u_xor(ret: *mut Vector4u, v0: *const Vector4u, v1: *const Vector4u) -> *mut Vector4u;
	fn tsVector4u_min(ret: *mut Vector4u, v0: *const Vector4u, v1: *const Vector4u) -> *mut Vector4u;
	fn tsVector4u_max(ret: *mut Vector4u, v0: *const Vector4u, v1: *const Vector4u) -> *mut Vector4u;
	fn tsVector4u_clamp(ret: *mut Vector4u, v: *const Vector4u, v0: *const Vector4u, v1: *const Vector4u) -> *mut Vector4u;
}

/*****************************************************************************\
 *
 * Vector4f
 *
\*****************************************************************************/

/*
 */
#[repr(C, align(16))]
#[derive(Copy, Clone, Default)]
pub struct Vector4f {
	pub x: f32,
	pub y: f32,
	pub z: f32,
	pub w: f32,
}

/*
 */
impl Vector4f {
